--- a/ra/admin/templates/adminlte/base.html
+++ b/ra/admin/templates/adminlte/base.html
@@ -28,8 +28,8 @@
     <link rel="stylesheet" href="{% static 'adminlte/css/adminlte.min.css' %}">
 
     <link rel="stylesheet" href="{% static 'adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css' %}">
-    <!-- Daterange picker -->
-    <link rel="stylesheet" href="{% static 'adminlte/plugins/daterangepicker/daterangepicker.css' %}">
+{#    <!-- Daterange picker -->#}
+{#    <link rel="stylesheet" href="{% static 'adminlte/plugins/daterangepicker/daterangepicker.css' %}">#}
 
     <link href="{{ STATIC_URL }}ra/css/animate.min.css" rel="stylesheet"
           type="text/css">
@@ -37,8 +37,9 @@
     <link rel="stylesheet" href="{{ STATIC_URL }}ra/plugins/datatables/datatables.css"/>
     <link rel="stylesheet"
           href="{{ STATIC_URL }}ra/plugins/datatables/DataTables-1.10.20/css/dataTables.bootstrap4.css"/>
-
-
+    <link rel="stylesheet" href="{% static "adminlte/plugins/select2/css/select2.min.css" %}">
+    <link rel="stylesheet" href="{% static "adminlte/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css" %}">
+{#    <link rel="stylesheet" href="{% static 'adminlte/plugins/daterangepicker/daterangepicker.css' %}">#}
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     {% block blockbots %}
@@ -158,7 +159,8 @@
                         <div class="sidebar">
                             <nav class="mt-2">
 
-                                <ul class="nav nav-pills nav-sidebar flex-column nav-collapse-hide-child nav-flat nav-legacy" data-widget="treeview" role="menu"
+                                <ul class="nav nav-pills nav-sidebar flex-column nav-collapse-hide-child nav-flat nav-legacy"
+                                    data-widget="treeview" role="menu"
                                     data-accordion="false">
                                     <!-- Add icons to the links using the .nav-icon class
                                          with font-awesome or any other icon font library -->
@@ -246,10 +248,11 @@
     $.widget.bridge('uibutton', $.ui.button)
 </script>
 <script src="{% static 'adminlte/plugins/moment/moment.min.js' %}"></script>
-<script src="{% static 'adminlte/plugins/daterangepicker/daterangepicker.js' %}"></script>
+{#<script src="{% static 'adminlte/plugins/daterangepicker/daterangepicker.js' %}"></script>#}
 
 <!-- Bootstrap 4 -->
 <script src="{% static 'adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'adminlte/plugins/select2/js/select2.full.min.js' %}"></script>
 <script src="{% static 'adminlte/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js' %}"></script>
 <script src="{% static 'adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
 
@@ -299,7 +302,7 @@
         src="{{ STATIC_URL }}ra/plugins/datatables/DataTables-1.10.20/js/dataTables.bootstrap4.js"></script>
 {#<script type="text/javascript" charset="utf8"#}
 {#        src="{{ STATIC_URL }}ra/js/vendor/datatables/extensions/FixedHeader/js/dataTables.fixedHeader.min.js"></script>#}
-<script type="text/javascript" src="{{ STATIC_URL }}ra/js/vendor/daterangepicker.js"></script>
+{#<script type="text/javascript" src="{{ STATIC_URL }}ra/js/vendor/daterangepicker.js"></script>#}
 <script src="{% static 'ra/plugins/chartsjs/src/Chart.js' %}"></script>
 
 <script src="{{ STATIC_URL }}ra/js/vendor/string-format.js"></script>
@@ -429,7 +432,6 @@
 
         $.ra.autocomplete.defaults.autocomplete_url = '{{ autocomplete_base_url }}';
         {#RA_SEARCH_URL = '{% url "site_wide_search" %}';#}
-
 
 
         jQuery(document).ready(function () {
