--- a/ra/admin/templates/adminlte/edit_inline/tabular.html
+++ b/ra/admin/templates/adminlte/edit_inline/tabular.html
@@ -37,7 +37,7 @@
                     <tr class="_form-row {% cycle "row1" "row2" %} {% if inline_admin_form.original or inline_admin_form.show_url %}has_original{% endif %}{% if forloop.last and inline_admin_formset.has_add_permission %} empty-form{% endif %}"
                         id="{{ inline_admin_formset.formset.prefix }}-{% if not forloop.last %}{{ forloop.counter0 }}{% else %}empty{% endif %}">
                         <td class="original">
-                            {% if inline_admin_form.original or inline_admin_form.show_url %}<p>
+                            {% if inline_admin_form.original or inline_admin_form.show_url %}<p style="display: none">
                                 {% if inline_admin_form.original %}
                                     {{ inline_admin_form.original }}
                                     {% if inline_admin_form.model_admin.show_change_link and inline_admin_form.model_admin.has_registered_model %}
