Package release, enhance readme

--- a/ra/admin/templates/adminlte/index.html
+++ b/ra/admin/templates/adminlte/index.html
@@ -12,6 +12,6 @@
 {% block breadcrumbs %}{% endblock %}
 
 {% block content %}
-<p>You're awesome, You're in !</p>
+<p style="text-align: center">You're awesome, You're in !</p>
 {% endblock %}
 
