--- a/ra/admin/templates/adminlte/change_list_results.html
+++ b/ra/admin/templates/adminlte/change_list_results.html
@@ -6,8 +6,8 @@
 {% endif %}
 {% if results %}
     <div class="results card">
-        <div class="card-body">
-            <table id="result_list" class="table hover stripe table-bordered">
+        <div class="">
+            <table id="result_list" class="table table-hover table-stripe table-condensed table-bordered">
                 <thead>
                 <tr>
                     {% for header in result_headers %}
