--- a/ra/admin/templates/adminlte/menu.html
+++ b/ra/admin/templates/adminlte/menu.html
@@ -33,7 +33,7 @@
                         {% for model in app.models %}
                             <li class="nav-item ">
                                 <a href="{{ model.url }}"{{ model.blank|yesno:' target=_blank,' }} class="nav-link {{ model.is_active|yesno:' active,' }}">
-                                    <i class="far fa-circle nav-icon"></i>
+{#                                    <i class="far fa-circle nav-icon"></i>#}
                                     <p>{{ model.label }}</p>
                                 </a>
                             </li>
