--- a/ra/admin/templates/adminlte/reports_menu.html
+++ b/ra/admin/templates/adminlte/reports_menu.html
@@ -16,7 +16,7 @@
             <li class="nav-item ">
                 <a href="{{ report.get_report_list_url }}"
                    class="nav-link {% if active_base_model == report.get_model_name %}active{% endif %}">
-                    <i class="far fa-circle nav-icon"></i>
+{#                    <i class="far fa-circle nav-icon"></i>#}
                     <p>{{ report.get_verbose_name_plural }}</p>
                 </a>
             </li>
