--- a/ra/admin/templates/adminlte/change_form_object_tools.html
+++ b/ra/admin/templates/adminlte/change_form_object_tools.html
@@ -1,8 +1,17 @@
 {% load i18n admin_urls %}
 {% block object-tools-items %}
-<li>
+            {% url opts|admin_urlname:'add' as add_url %}
+        <a href="{% add_preserved_filters add_url is_popup to_field %}" class=" ml-2">
+            <i class="fas fa-plus-circle"></i>
+            {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
+        </a>
+
+
     {% url opts|admin_urlname:'history' original.pk|admin_urlquote as history_url %}
-    <a href="{% add_preserved_filters history_url %}" class="historylink">{% trans "History" %}</a>
-</li>
-{% if has_absolute_url %}<li><a href="{{ absolute_url }}" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif %}
+
+    <a href="{% add_preserved_filters history_url %}" class="ml-2"> <i class="fas fa-history"></i> {% trans "History" %}
+    </a>
+
+    {% if has_absolute_url %}
+        <li><a href="{{ absolute_url }}" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif %}
 {% endblock %}
