--- a/ra/admin/templates/adminlte/delete_confirmation.html
+++ b/ra/admin/templates/adminlte/delete_confirmation.html
@@ -27,39 +27,40 @@
 
 {% block content %}
     <div class="card">
-    <div class="card-body">
-    {% if perms_lacking %}
-        <p>
-            {% blocktrans with escaped_object=object %}Deleting the {{ object_name }} '{{ escaped_object }}' would result in deleting related objects, but your account doesn't have permission to delete the following types of objects:{% endblocktrans %}</p>
-        <ul>
-            {% for obj in perms_lacking %}
-                <li>{{ obj }}</li>
-            {% endfor %}
-        </ul>
-    {% elif protected %}
-        <p>
-            {% blocktrans with escaped_object=object %}Deleting the {{ object_name }} '{{ escaped_object }}' would require deleting the following protected related objects:{% endblocktrans %}</p>
-        <ul>
-            {% for obj in protected %}
-                <li>{{ obj }}</li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>
-            {% blocktrans with escaped_object=object %}Are you sure you want to delete the {{ object_name }} "{{ escaped_object }}"? All of the following related items will be deleted:{% endblocktrans %}</p>
-        {% include "admin/includes/object_delete_summary.html" %}
-        <h2>{% trans "Objects" %}</h2>
-        <ul>{{ deleted_objects|unordered_list }}</ul>
-        <form method="post">{% csrf_token %}
-            <div>
-                <input type="hidden" name="post" value="yes">
-                {% if is_popup %}<input type="hidden" name="{{ is_popup_var }}" value="1">{% endif %}
-                {% if to_field %}<input type="hidden" name="{{ to_field_var }}" value="{{ to_field }}">{% endif %}
-                <input type="submit" value="{% trans "Yes, I'm sure" %}" class="btn btn-danger">
-                <a href="#" class="button cancel-link btn btn-default">{% trans "No, take me back" %}</a>
-            </div>
-        </form>
-    {% endif %}
-    </div>
+        <div class="card-body">
+            {% if perms_lacking %}
+                <p>
+                    {% blocktrans with escaped_object=object %}Deleting the {{ object_name }} '{{ escaped_object }}' would result in deleting related objects, but your account doesn't have permission to delete the following types of objects:{% endblocktrans %}</p>
+                <ul>
+                    {% for obj in perms_lacking %}
+                        <li>{{ obj }}</li>
+                    {% endfor %}
+                </ul>
+            {% elif protected %}
+                <p>
+                    {% blocktrans with escaped_object=object %}Deleting the {{ object_name }} '{{ escaped_object }}' would require deleting the following protected related objects:{% endblocktrans %}</p>
+                <ul>
+                    {% for obj in protected %}
+                        <li>{{ obj }}</li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>
+                    {% blocktrans with escaped_object=object %}Are you sure you want to delete the {{ object_name }} "{{ escaped_object }}"? All of the following related items will be deleted:{% endblocktrans %}</p>
+                {% include RA_THEME|add:"/includes/object_delete_summary.html" %}
+                <h2>{% trans "Objects" %}</h2>
+                <ul>{{ deleted_objects|unordered_list }}</ul>
+                <form method="post">{% csrf_token %}
+                    <div>
+                        <input type="hidden" name="post" value="yes">
+                        {% if is_popup %}<input type="hidden" name="{{ is_popup_var }}" value="1">{% endif %}
+                        {% if to_field %}
+                            <input type="hidden" name="{{ to_field_var }}" value="{{ to_field }}">{% endif %}
+                        <input type="submit" value="{% trans "Yes, I'm sure" %}" class="btn btn-danger">
+                        <a href="#" class="button cancel-link btn btn-default">{% trans "No, take me back" %}</a>
+                    </div>
+                </form>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
