--- a/ra/admin/templates/adminlte/edit_inline/stacked.html
+++ b/ra/admin/templates/adminlte/edit_inline/stacked.html
@@ -16,7 +16,7 @@
   </h3>
   {% if inline_admin_form.form.non_field_errors %}{{ inline_admin_form.form.non_field_errors }}{% endif %}
   {% for fieldset in inline_admin_form %}
-    {% include "admin/includes/fieldset.html" %}
+    {% include  RA_THEME|add:"/includes/fieldset.html" %}
   {% endfor %}
   {% if inline_admin_form.needs_explicit_pk_field %}{{ inline_admin_form.pk_field.field }}{% endif %}
   {% if inline_admin_form.fk_field %}{{ inline_admin_form.fk_field.field }}{% endif %}
