--- a/ra/admin/templates/adminlte/base.html
+++ b/ra/admin/templates/adminlte/base.html
@@ -78,6 +78,7 @@
         .filters-section {
             margin-top: 1em;
         }
+
     </style>
 
 <style>
@@ -86,6 +87,15 @@
     }
     .table thead{
         background-color: #f8f8f8;
+    }
+    .go-to-change-form {
+        float: right;
+    }
+    .groupChartControllers {
+        text-align: center;
+    }
+    .object-tools {
+        float: right;
     }
 </style>
 </head>
@@ -96,7 +106,7 @@
         <!-- Navbar -->
         {% if not is_popup and not is_print %}
             {% block nav_bar_header %}
-                <nav class="main-header navbar navbar-expand navbar-dark navbar-primary border-bottom-0">
+                <nav class="main-header navbar navbar-expand navbar-dark navbar-indigo border-bottom-0">
                     <!-- Left navbar links -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -105,7 +115,7 @@
                     </ul>
 
                     {% block usertools %}
-                        {% if has_permission %}
+                        {% if user.is_authenticated %}
                             <ul class="navbar-nav ml-auto">
                                 <!-- Messages Dropdown Menu -->
                                 <li class="nav-item dropdown">
@@ -154,21 +164,22 @@
             {% endblock %}
             {% block main_sidebar %}
                 {% if not is_popup and not is_print %}
-                    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+                    <aside class="main-sidebar  sidebar-dark-primary elevation-1">
                         <!-- Brand Logo -->
-                        <a href="{% url 'ra_admin:index' %}" class="brand-link">
+                        <a href="{% url 'ra_admin:index' %}" class="brand-link navbar-indigo">
                             <img src="{% static 'ra/images/ra_systems.png' %}"
                                  alt="Logo"
-                                 class="brand-image img-circle elevation-3"
+                                 class="brand-image elevation-3"
                                  style="opacity: .8">
-                            <span class="brand-text font-weight-light">Ra framework</span>
+                            <span class="brand-text font-weight-light text-white">Ra framework</span>
                         </a>
 
                         <!-- Sidebar -->
                         <div class="sidebar">
+
                             <nav class="mt-2">
 
-                                <ul class="nav nav-pills nav-sidebar flex-column nav-collapse-hide-child nav-flat text-sm"
+                                <ul class="nav nav-pills nav-sidebar flex-column nav-collapse-hide-child nav-flat "
                                     data-widget="treeview" role="menu"
                                     data-accordion="false">
                                     <!-- Add icons to the links using the .nav-icon class
@@ -187,10 +198,10 @@
             {% endblock %}
         {% endif %}
         <!-- Content Wrapper. Contains page content -->
-        <div class="content-wrapper text-sm">
+        <div class="content-wrapper ">
             <!-- Content Header (Page header) -->
             <section class="content-header">
-                <div class="container-fluid">
+                <div class="container-fluid mt-3">
                     {% block pretitle %}{% endblock %}
                     <div class="row mb-2">
 
