--- a/ra/admin/templates/adminlte/change_form.html
+++ b/ra/admin/templates/adminlte/change_form.html
@@ -41,7 +41,7 @@
         {% block object-tools %}
             <div class="row">
                 <div class="col-sm">
-                    <div class="btn-group">
+                    <div class="btn-group object-tools">
 
                         {% if change %}{% if not is_popup %}
 
