--- a/ra/admin/templates/adminlte/change_list.html
+++ b/ra/admin/templates/adminlte/change_list.html
@@ -49,7 +49,7 @@
         {% block object-tools %}
             <div class="row">
                 <div class="col-sm">
-                    <div class="btn-group">
+                    <div class="btn-group object-tools">
                         {% block object-tools-items %}
                             {% ra_change_list_object_tools %}
                         {% endblock %}
@@ -71,7 +71,7 @@
                 {% if cl.has_filters %}
                     <div class="filters-section">
                         <div class="row">
-                            <h6>{% trans 'Filters' %}</h6>
+{#                            <h6>{% trans 'Filters' %}</h6>#}
                             {% for spec in cl.filter_specs %}{% ra_admin_list_filter cl spec %}{% endfor %}
 
                         </div>
