--- a/ra/admin/templates/adminlte/reversion/recover_form.html
+++ b/ra/admin/templates/adminlte/reversion/recover_form.html
@@ -1,4 +1,4 @@
-{% extends "ra/adminlte/reversion/revision_form.html" %}
+{% extends RA_THEME|add:"/reversion/revision_form.html" %}
 {% load i18n admin_urls %}
 
 
