--- a/ra/admin/templates/adminlte/search_form.html
+++ b/ra/admin/templates/adminlte/search_form.html
@@ -7,7 +7,7 @@
                     <div class="input-group input-group-sm">
                         <input type="text" class="form-control" name="{{ search_var }}" value="{{ cl.query }}">
                         <span class="input-group-append">
-                    <input type="submit" class="btn btn-primary btn-flat" value="{% trans 'Search' %}"/>
+                    <input type="submit" class="btn btn-outline-primary btn-flat" value="{% trans 'Search' %}"/>
                   </span>
                     </div>
 
