--- a/ra/admin/templates/adminlte/change_form_object_tools.html
+++ b/ra/admin/templates/adminlte/change_form_object_tools.html
@@ -1,7 +1,7 @@
 {% load i18n admin_urls %}
 {% block object-tools-items %}
             {% url opts|admin_urlname:'add' as add_url %}
-        <a href="{% add_preserved_filters add_url is_popup to_field %}" class=" ml-2">
+        <a href="{% add_preserved_filters add_url is_popup to_field %}" class="btn btn-outline-primary btn-flat ml-2">
             <i class="fas fa-plus-circle"></i>
             {% blocktrans with cl.opts.verbose_name as name %}Add {{ name }}{% endblocktrans %}
         </a>
@@ -9,7 +9,7 @@
 
     {% url opts|admin_urlname:'history' original.pk|admin_urlquote as history_url %}
 
-    <a href="{% add_preserved_filters history_url %}" class="ml-2"> <i class="fas fa-history"></i> {% trans "History" %}
+    <a href="{% add_preserved_filters history_url %}" class="btn btn-outline-primary btn-flat ml-2"> <i class="fas fa-history"></i> {% trans "History" %}
     </a>
 
     {% if has_absolute_url %}
