--- a/ra/admin/templates/adminlte/edit_inline/tabular.html
+++ b/ra/admin/templates/adminlte/edit_inline/tabular.html
@@ -1,13 +1,13 @@
 {% load i18n admin_urls static admin_modify %}
-<div class="js-inline-admin-formset inline-group" id="{{ inline_admin_formset.formset.prefix }}-group"
+<div class="js-inline-admin-formset inline-group mt-3" id="{{ inline_admin_formset.formset.prefix }}-group"
      data-inline-type="tabular"
      data-inline-formset="{{ inline_admin_formset.inline_formset_data }}">
     <div class="tabular inline-related {% if forloop.last %}last-related{% endif %}">
         {{ inline_admin_formset.formset.management_form }}
         <fieldset class="module {{ inline_admin_formset.classes }}">
-            <h2>{{ inline_admin_formset.opts.verbose_name_plural|capfirst }}</h2>
+            <h4>{{ inline_admin_formset.opts.verbose_name_plural|capfirst }}</h4>
             {{ inline_admin_formset.formset.non_form_errors }}
-            <table class="table stripe hover">
+            <table class="table table-striped table-hover">
                 <thead>
                 <tr>
                     <th class="original"></th>
