--- a/ra/admin/templates/adminlte/change_form.html
+++ b/ra/admin/templates/adminlte/change_form.html
@@ -35,6 +35,16 @@
         </li>
     {% endblock %}
 {% endif %}
+{% block messages %}
+    {% if errors %}
+        <div class="callout callout-danger ">
+            <i class="icon fas fa-ban"></i>
+            {% if errors|length == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
+            {{ adminform.form.non_field_errors }}
+        </div>
+    {% endif %}
+
+{% endblock %}
 
 {% block content %}
     <div id="content-main">
@@ -45,9 +55,9 @@
 
                         {% if change %}{% if not is_popup %}
 
-                                {% block object-tools-items %}
-                                    {% ra_change_form_object_tools %}
-                                {% endblock %}
+                            {% block object-tools-items %}
+                                {% ra_change_form_object_tools %}
+                            {% endblock %}
 
                         {% endif %}{% endif %}
                     </div>
@@ -62,12 +72,6 @@
                 <div class="card">
                     {% if save_on_top %}{% block submit_buttons_top %}{% ra_submit_row %}{% endblock %}{% endif %}
                     <div class="card-body">
-                        {% if errors %}
-                            <p class="errornote">
-                                {% if errors|length == 1 %}{% trans "Please correct the error below." %}{% else %}{% trans "Please correct the errors below." %}{% endif %}
-                            </p>
-                            {{ adminform.form.non_field_errors }}
-                        {% endif %}
 
                         {% block field_sets %}
                             {% for fieldset in adminform %}
