Welcome simple_report with table

--- a/ra/reporting/templates/reporting/simple_report.html
+++ b/ra/reporting/templates/reporting/simple_report.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {{ form }}
+    <form>
+        {{ form }}
+        <input type="submit" value="Submit">
+    </form>
 
-    {{ report_data }}
+    {% include 'reporting/table.html' with table=report_data %}
 {% endblock %}
