Slick Reporting compatibility

--- a/ra/admin/templates/adminlte/report_list.html
+++ b/ra/admin/templates/adminlte/report_list.html
@@ -120,7 +120,7 @@
 
 
             var $chart = $tabcontent.find('canvas');
-            let chartObject = $.ra.chartsjs.createChartObject(data, $this.attr('data-chart-id'), {});
+            let chartObject = $.slick_reporting.chartsjs.createChartObject(data, $this.attr('data-chart-id'), {});
 
             try {
                 myChart.destroy();
