--- a/ra/admin/templates/adminlte/base.html
+++ b/ra/admin/templates/adminlte/base.html
@@ -356,11 +356,12 @@
 
 <script type="text/javascript" charset="utf8"
         src="{% static 'ra/js/vendor/noty/lib/noty.min.js' %}"></script>
+<script src="{% static 'slick_reporting/ra.chartsjs.js' %}"></script>
+
 <script type="text/javascript" src="{% static 'ra/js/ra.report_loader.js' %}"></script>
 <script type="text/javascript" src="{% static 'ra/js/ra.dataComprehension.js' %}"></script>
 
 <script src="{% static 'ra/js/ra_main_js.js' %}"></script>
-<script src="{% static 'ra/js/ra.chartsjs.js' %}"></script>
 <script src="{% static 'ra/js/ra.datatable.js' %}"></script>
 
 {% block date_range_default_js %}
