More testing, more cleaning and compacting.

--- a/ra/admin/templates/adminlte/report_list.html
+++ b/ra/admin/templates/adminlte/report_list.html
@@ -1,5 +1,5 @@
 {% extends "ra/admin/base_site.html" %}
-{% load ra_tags ra_report_tags crispy_forms_tags crispy_forms_field %}
+{% load ra_tags crispy_forms_tags crispy_forms_field %}
 
 
 {% load i18n admin_urls static admin_modify ra_admin_tags %}
