--- a/ra/admin/templates/adminlte/report_list_forms.html
+++ b/ra/admin/templates/adminlte/report_list_forms.html
@@ -1,5 +1,5 @@
 {% load ra_tags %}
-{% load ra_report_tags crispy_forms_tags crispy_forms_field %}
+{% load crispy_forms_tags crispy_forms_field %}
 {% load i18n %}
 
 {% if reports %}
