--- a/ra/admin/templates/adminlte/report_list_form_buttons.html
+++ b/ra/admin/templates/adminlte/report_list_form_buttons.html
@@ -1,4 +1,4 @@
-{% load i18n ra_tags ra_report_tags %}
+{% load i18n ra_tags %}
 <ul class="heading-btn float-right">
     <a class=" btn btn-outline-primary btn-flat    refreshReport screenOnly"
        data-toggle="tooltip"
