--- a/ra/admin/templates/ra/snippets/panel_for_report.html
+++ b/ra/admin/templates/ra/snippets/panel_for_report.html
@@ -15,7 +15,8 @@
 {#             data-chart-id="{{ data_chart_id|default:'' }}"#}
         >
             {% if not no_chart %}
-                <canvas data-report-chart height="100"></canvas>
+                <div id="container" data-report-chart style="width:100%; height:400px;"></div>
+{#                <canvas data-report-chart height="100"></canvas>#}
             {% endif %}
             <div data-report-table>
 
