Pie charts Enhancements in report loading

--- a/ra/admin/templates/adminlte/report_list.html
+++ b/ra/admin/templates/adminlte/report_list.html
@@ -85,6 +85,7 @@
         });
 
         function loadReport(report_slug, params, callback) {
+            return;
             if (typeof(params) == "undefined"){
                 params = report_slug + '/?' + $(report_slug).find('form').serialize();
             }
