--- a/ra/admin/templates/adminlte/report_list_forms.html
+++ b/ra/admin/templates/adminlte/report_list_forms.html
@@ -47,15 +47,33 @@
                             </div>
                             <div class="card">
                                 <div class="card-body">
-                                    <div class="chartContainer screenOnly">
-                                        <div class="controls"></div>
-                                        <div class="reportChart screenOnly" dir="ltr"></div>
-                                        {% if report.chart_settings %}
-                                            <canvas id="{{ report.get_report_slug }}" class="chartsJsCanvas" width="400"
-                                                    height="100"></canvas>
+                                    <div data-report-widget
+                                         data-report-url="{{ report.get_url }}"
+                                         data-extra-params="{{ data_extra_param|default:'' }}"
+                                         data-success-callback="{{ data_success_callback|default:'' }}"
+                                            {#             data-chart-id="{{ data_chart_id|default:'' }}"#}
+                                    >
+                                        {% if not no_chart %}
+                                            <div id="container" data-report-chart
+                                                 style="width:100%; height:400px;"></div>
+                                            {#                <canvas data-report-chart height="100"></canvas>#}
                                         {% endif %}
+                                        <div data-report-table>
+
+                                        </div>
                                     </div>
-                                    <div class="report-table"></div>
+
+
+                                    {#                                    <div class="chartContainer screenOnly">#}
+                                    {#                                    #}
+                                    {#                                        <div class="controls"></div>#}
+                                    {#                                        <div class="reportChart screenOnly" dir="ltr"></div>#}
+                                    {#                                        {% if report.chart_settings %}#}
+                                    {#                                            <canvas id="{{ report.get_report_slug }}" class="chartsJsCanvas" width="400"#}
+                                    {#                                                    height="100"></canvas>#}
+                                    {#                                        {% endif %}#}
+                                    {#                                    </div>#}
+                                    {#                                    <div class="report-table"></div>#}
                                 </div>
                             </div>
 
@@ -64,35 +82,6 @@
                 </div>
 
 
-            </div>
-        </div>
-    </div>
-    <div id="reportSub" class="modal fade" tabindex="-1">
-        <div class="modal-dialog modal-xl">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-
-                    <h5 class="modal-title"></h5>
-                </div>
-
-                <div class="modal-body">
-                    <div class="chartContainer">
-                        <div class="controls"></div>
-                        <div class="reportChart screenOnly" dir="ltr"></div>
-                    </div>
-                    <div class="reportTableContainer">
-
-                    </div>
-
-                </div>
-
-                <div class="modal-footer">
-                    <a class=" btn printSubTable" href="#">
-                        <i class="fa fa-print"></i> {% trans "Print" %}</a>
-                    <button type="button" class="btn btn-link"
-                            data-dismiss="modal">{% trans 'Close'|capfirst %}</button>
-                </div>
             </div>
         </div>
     </div>
