--- a/ra/admin/templates/adminlte/report_list_form_buttons.html
+++ b/ra/admin/templates/adminlte/report_list_form_buttons.html
@@ -3,7 +3,9 @@
     <a class=" btn btn-outline-primary btn-flat    refreshReport screenOnly"
        data-toggle="tooltip"
        title="{% trans 'refresh'|capfirst %}" data-placement="top"
-       href="#{{ report.get_report_slug }}">
+       href="#{{ report.get_report_slug }}"
+       data-report-url="{{ report.get_url }}"
+    >
         {% trans 'refresh'|capfirst %}
         <i class="fa fa-refresh position-left"></i></a>
     {% can_print_report report as can_print %}
@@ -12,11 +14,12 @@
            href="#" data-toggle="tooltip" title="{% trans 'Print' %}"
            data-placement="top" data-report-url="{{ report.get_url }}" data-report-slug="{{ report.get_report_slug }}">
 
-            <i class="fa fa-print position-left"></i>         {% trans 'Print' %} </a>
+            <i class="fa fa-print position-left"></i> {% trans 'Print' %} </a>
 
         <div class="btn-group screenOnly download-report">
             <a class="download-csv btn btn-outline-secondary btn-flat    screenOnly"
-               href="#{{ report.get_report_slug }}" data-report-url="{{ report.get_url }}" data-report-slug="{{ report.get_report_slug }}">
+               href="#{{ report.get_report_slug }}" data-report-url="{{ report.get_url }}"
+               data-report-slug="{{ report.get_report_slug }}">
 
                 <i class="fas fa-file-excel position-left"></i>
                 EXCEL
